--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effective Solutions
     for Your Business</title>
+    <link rel="stylesheet" href="./css/styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1/modern-normalize.min.css">
 </head>
 <body>
     <header>
         <nav>
-       <a href="./index.html">WebStudio</a>
+       <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
     <ul>
-        <li><a href="#studio">Studio</a></li>
-        <li><a href="#our">Portfolio</a></li>
-        <li><a href="#contacts">Contacts</a></li>
+        <li class="link-text"><a href="#studio">Studio</a></li>
+        <li class="link-text"><a href="#our">Portfolio</a></li>
+        <li class="link-text"><a href="#contacts">Contacts</a></li>
     </ul>
    </nav>
    <address>
@@ -24,71 +30,104 @@
   </address>
     </header>
     <main>
-        <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <section class="header">
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
     </section>
-    <section>
+    <section class="strategy">
     <h2 class="sr-only" aria-hidden="true">Effective Solutions for Your Business</h2>
         <ul>
-            <li><h3>Strategy</h3>
-            <p>
+            <li><h3 class="header-3">Strategy</h3>
+            <p class="medium">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution.
             </p></li>
-            <li><h3>Punctuality</h3>
-            <p>
+            <li><h3 class="header-3">Punctuality</h3>
+            <p class="medium">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p></li>
-            <li><h3>Diligence</h3>
-            <p>
+            <li><h3 class="header-3">Diligence</h3>
+            <p class="medium">
                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
             </p></li>
-            <li><h3>Technologies</h3>
-            <p>
+            <li><h3 class="header-3">Technologies</h3>
+            <p class="medium">
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
             </p></li>
         </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
+        <section class="team">
+            <h2 class="header-2">Our Team</h2>
             <ul>
             <li>
-                <img src="./images/Mark.jpg" 
-                alt="Mark" 
+                <img src="./images/mark-guerrero.jpg" 
+                alt="mark-guerrero" 
                 width="264"
                 height="260"
                 />
-           <h3>Mark Guerrero</h3>
-            <p>Product Designer</p></li>
+           <h3 class="header-3">Mark Guerrero</h3>
+            <p class="text">Product Designer</p></li>
              <li>
-                <img src="./images/Tom.jpg" 
-                alt="Tom" 
+                <img src="./images/tom-ford.jpg" 
+                alt="tom-ford" 
                 width="264"
                 height="260"
                  />
-           <h3>Tom Ford</h3>
-            <p>Frontend Developer</p></li>
+           <h3 class="header-3">Tom Ford</h3>
+            <p class="text">Frontend Developer</p></li>
              <li>
-                <img src="./images/Camila.jpg"  
-                alt="Camila" 
+                <img src="./images/camila-carcia.jpg"  
+                alt="camila-carcia" 
                 width="264" 
                 height="260"  
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p></li>
+            <h3 class="header-3">Camila Garcia</h3>
+            <p class="text">Marketing</p></li>
             <li>
-                <img src="./images/Daniel.jpg" 
-                alt="Daniel" 
+                <img src="./images/daniel-wilson.jpg" 
+                alt="daniel-wilson" 
                 width="264"
                 height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p></li>
+            <h3 class="header-3">Daniel Wilson</h3>
+            <p class="text">UI Designer</p></li>
         </ul></section>
+        <section>
+            <h2 class="header-2">Our Portfolio</h2>
+                <ul> 
+                    <li><img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300"></li>
+                    <li><h3 class="header-3">Banking App</h3></li>
+                    <li><p class="text">App</p></li>
+                </ul>
+                <ul>  
+                    <li><img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"></li> 
+                    <li><h3 class="header-3">Cashless Payment</h3></li>
+                    <li><p class="text">Marketing</p></li> 
+                </ul>
+                <ul>    
+                    <li><img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300"></li>
+                    <li><h3 class="header-3">Meditation App</h3></li>
+                    <li><p class="text">App</p></li>     
+                </ul>
+                <ul>  
+                    <li><img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300"></li>
+                    <li><h3 class="header-3">Taxi Service</h3></li>
+                    <li><p class="text">Marketing</p></li>
+                </ul>
+                <ul>         
+                    <li><img src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300"></li>
+                    <li><h3 class="header-3">Screen Illustrations</h3></li>
+                    <li><p class="text">Design</p></li> 
+                </ul>
+                <ul>         
+                    <li><img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300"> </li>
+                    <li><h3 class="header-3">Online Courses</h3></li>
+                    <li><p class="text">Marketing</p></li> 
+                </ul>
+        </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-         <p>
+    <footer class="footer">
+        <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+         <p class="text-footer">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
