--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1/modern-normalize.min.css">
 </head>
 <body>
-    <header>
+    <header class="header-nav">
         <nav>
        <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
     <ul>
@@ -30,33 +30,33 @@
   </address>
     </header>
     <main>
-        <section class="header">
+        <section class="header-1">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
     </section>
-    <section class="strategy">
+    <section class="header-2">
     <h2 class="sr-only" aria-hidden="true">Effective Solutions for Your Business</h2>
         <ul>
-            <li><h3 class="header-3">Strategy</h3>
+            <li><h3 class="head-3">Strategy</h3>
             <p class="medium">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution.
             </p></li>
-            <li><h3 class="header-3">Punctuality</h3>
+            <li><h3 class="head-3">Punctuality</h3>
             <p class="medium">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p></li>
-            <li><h3 class="header-3">Diligence</h3>
+            <li><h3 class="head-3">Diligence</h3>
             <p class="medium">
                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
             </p></li>
-            <li><h3 class="header-3">Technologies</h3>
+            <li><h3 class="head-3">Technologies</h3>
             <p class="medium">
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
             </p></li>
         </ul>
         </section>
-        <section class="team">
-            <h2 class="header-2">Our Team</h2>
+        <section class="header-3">
+            <h2 class="head-2">Our Team</h2>
             <ul>
             <li>
                 <img src="./images/mark-guerrero.jpg" 
@@ -64,7 +64,7 @@
                 width="264"
                 height="260"
                 />
-           <h3 class="header-3">Mark Guerrero</h3>
+           <h3 class="head-3">Mark Guerrero</h3>
             <p class="text">Product Designer</p></li>
              <li>
                 <img src="./images/tom-ford.jpg" 
@@ -72,7 +72,7 @@
                 width="264"
                 height="260"
                  />
-           <h3 class="header-3">Tom Ford</h3>
+           <h3 class="head-3">Tom Ford</h3>
             <p class="text">Frontend Developer</p></li>
              <li>
                 <img src="./images/camila-carcia.jpg"  
@@ -80,7 +80,7 @@
                 width="264" 
                 height="260"  
             />
-            <h3 class="header-3">Camila Garcia</h3>
+            <h3 class="head-3">Camila Garcia</h3>
             <p class="text">Marketing</p></li>
             <li>
                 <img src="./images/daniel-wilson.jpg" 
@@ -88,39 +88,39 @@
                 width="264"
                 height="260"
             />
-            <h3 class="header-3">Daniel Wilson</h3>
+            <h3 class="head-3">Daniel Wilson</h3>
             <p class="text">UI Designer</p></li>
         </ul></section>
-        <section>
-            <h2 class="header-2">Our Portfolio</h2>
+        <section class="header-4">
+            <h2 class="head-2">Our Portfolio</h2>
                 <ul> 
                     <li><img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300"></li>
-                    <li><h3 class="header-3">Banking App</h3></li>
+                    <li><h3 class="head-3">Banking App</h3></li>
                     <li><p class="text">App</p></li>
                 </ul>
                 <ul>  
                     <li><img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"></li> 
-                    <li><h3 class="header-3">Cashless Payment</h3></li>
+                    <li><h3 class="head-3">Cashless Payment</h3></li>
                     <li><p class="text">Marketing</p></li> 
                 </ul>
                 <ul>    
                     <li><img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300"></li>
-                    <li><h3 class="header-3">Meditation App</h3></li>
+                    <li><h3 class="head-3">Meditation App</h3></li>
                     <li><p class="text">App</p></li>     
                 </ul>
                 <ul>  
                     <li><img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300"></li>
-                    <li><h3 class="header-3">Taxi Service</h3></li>
+                    <li><h3 class="head-3">Taxi Service</h3></li>
                     <li><p class="text">Marketing</p></li>
                 </ul>
                 <ul>         
                     <li><img src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300"></li>
-                    <li><h3 class="header-3">Screen Illustrations</h3></li>
+                    <li><h3 class="head-3">Screen Illustrations</h3></li>
                     <li><p class="text">Design</p></li> 
                 </ul>
                 <ul>         
                     <li><img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300"> </li>
-                    <li><h3 class="header-3">Online Courses</h3></li>
+                    <li><h3 class="head-3">Online Courses</h3></li>
                     <li><p class="text">Marketing</p></li> 
                 </ul>
         </section>
