udpay index html file

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   </address>
     </header>
     <main>
-        <section class="header-1">
+        <section class="section-1">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
     </section>
-    <section class="header-2">
+    <section class="section-2">
     <h2 class="sr-only" aria-hidden="true">Effective Solutions for Your Business</h2>
         <ul>
             <li><h3 class="head-3">Strategy</h3>
@@ -55,7 +55,7 @@
             </p></li>
         </ul>
         </section>
-        <section class="header-3">
+        <section class="section-3">
             <h2 class="head-2">Our Team</h2>
             <ul>
             <li>
