--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <li class="link-text"><a href="#contacts">Contacts</a></li>
     </ul>
    </nav>
-   <address>
+   <address class="address">
     <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <li class="address-1"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="address-1"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
   </address>
     </header>
-    <main>
+    <main class="main">
         <section class="section-1">
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
@@ -37,19 +37,19 @@
     <section class="section-2">
     <h2 class="sr-only" aria-hidden="true">Effective Solutions for Your Business</h2>
         <ul>
-            <li><h3 class="head-3">Strategy</h3>
+            <li class="list"><h3 class="head-3">Strategy</h3>
             <p class="medium">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution.
             </p></li>
-            <li><h3 class="head-3">Punctuality</h3>
+            <li class="list"><h3 class="head-3">Punctuality</h3>
             <p class="medium">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p></li>
-            <li><h3 class="head-3">Diligence</h3>
+            <li class="list"><h3 class="head-3">Diligence</h3>
             <p class="medium">
                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
             </p></li>
-            <li><h3 class="head-3">Technologies</h3>
+            <li class="list"><h3 class="head-3">Technologies</h3>
             <p class="medium">
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
             </p></li>
@@ -58,7 +58,7 @@
         <section class="section-3">
             <h2 class="head-2">Our Team</h2>
             <ul>
-            <li>
+            <li class="list">
                 <img src="./images/mark-guerrero.jpg" 
                 alt="mark-guerrero" 
                 width="264"
@@ -66,7 +66,7 @@
                 />
            <h3 class="head-3">Mark Guerrero</h3>
             <p class="text">Product Designer</p></li>
-             <li>
+             <li class="list">
                 <img src="./images/tom-ford.jpg" 
                 alt="tom-ford" 
                 width="264"
@@ -74,7 +74,7 @@
                  />
            <h3 class="head-3">Tom Ford</h3>
             <p class="text">Frontend Developer</p></li>
-             <li>
+             <li class="list">
                 <img src="./images/camila-carcia.jpg"  
                 alt="camila-carcia" 
                 width="264" 
@@ -82,7 +82,7 @@
             />
             <h3 class="head-3">Camila Garcia</h3>
             <p class="text">Marketing</p></li>
-            <li>
+            <li class="list">
                 <img src="./images/daniel-wilson.jpg" 
                 alt="daniel-wilson" 
                 width="264"
@@ -91,37 +91,37 @@
             <h3 class="head-3">Daniel Wilson</h3>
             <p class="text">UI Designer</p></li>
         </ul></section>
-        <section class="header-4">
+        <section class="section-4">
             <h2 class="head-2">Our Portfolio</h2>
                 <ul> 
-                    <li><img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300"></li>
-                    <li><h3 class="head-3">Banking App</h3></li>
-                    <li><p class="text">App</p></li>
+                    <li><img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300">
+                    <h3 class="head-3">Banking App</h3>
+                    <p class="text">App</p></li>
                 </ul>
                 <ul>  
-                    <li><img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"></li> 
-                    <li><h3 class="head-3">Cashless Payment</h3></li>
-                    <li><p class="text">Marketing</p></li> 
+                    <li><img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"> 
+                    <h3 class="head-3">Cashless Payment</h3>
+                    <p class="text">Marketing</p></li> 
                 </ul>
                 <ul>    
-                    <li><img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300"></li>
-                    <li><h3 class="head-3">Meditation App</h3></li>
-                    <li><p class="text">App</p></li>     
+                    <li><img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300">
+                    <h3 class="head-3">Meditation App</h3>
+                    <p class="text">App</p></li>     
                 </ul>
                 <ul>  
-                    <li><img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300"></li>
-                    <li><h3 class="head-3">Taxi Service</h3></li>
-                    <li><p class="text">Marketing</p></li>
+                    <li><img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300">
+                    <h3 class="head-3">Taxi Service</h3>
+                    <p class="text">Marketing</p></li>
                 </ul>
                 <ul>         
-                    <li><img src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300"></li>
-                    <li><h3 class="head-3">Screen Illustrations</h3></li>
-                    <li><p class="text">Design</p></li> 
+                    <li><img src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300">
+                    <h3 class="head-3">Screen Illustrations</h3>
+                    <p class="text">Design</p></li> 
                 </ul>
                 <ul>         
-                    <li><img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300"> </li>
-                    <li><h3 class="head-3">Online Courses</h3></li>
-                    <li><p class="text">Marketing</p></li> 
+                    <li><img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300">
+                    <h3 class="head-3">Online Courses</h3>
+                    <p class="text">Marketing</p></li> 
                 </ul>
         </section>
     </main>
