--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Effective Solutions
     for Your Business</title>
     <link rel="stylesheet" href="./css/styles.css">
@@ -15,8 +18,8 @@
 <body>
     <header class="header-nav">
         <nav>
-       <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
-    <ul>
+    <ul>   
+        <li class="logo"><a href="./index.html">Web<span class="logo-black">Studio</span></a></li>
         <li class="link-text"><a href="#studio">Studio</a></li>
         <li class="link-text"><a href="#our">Portfolio</a></li>
         <li class="link-text"><a href="#contacts">Contacts</a></li>
@@ -29,99 +32,99 @@
     </ul>
   </address>
     </header>
-    <main class="main">
-        <section class="section-1">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+    <main>
+        <section class="business">
+        <h1 class="business-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="business-button">Order Service</button>
     </section>
-    <section class="section-2">
+    <section class="strategy">
     <h2 class="sr-only" aria-hidden="true">Effective Solutions for Your Business</h2>
-        <ul>
-            <li class="list"><h3 class="head-3">Strategy</h3>
-            <p class="medium">
+        <ul class="strategy-list">
+            <li class="strategy-iteil"><h3 class="strategy-head">Strategy</h3>
+            <p class="strategy-text">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution.
             </p></li>
-            <li class="list"><h3 class="head-3">Punctuality</h3>
-            <p class="medium">
+            <li class="strategy-iteil"><h3 class="strategy-head">Punctuality</h3>
+            <p class="strategy-text">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p></li>
-            <li class="list"><h3 class="head-3">Diligence</h3>
-            <p class="medium">
+            <li class="strategy-iteil"><h3 class="strategy-head">Diligence</h3>
+            <p class="strategy-text">
                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
             </p></li>
-            <li class="list"><h3 class="head-3">Technologies</h3>
-            <p class="medium">
+            <li class="strategy-iteil"><h3 class="strategy-head">Technologies</h3>
+            <p class="strategy-text">
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
             </p></li>
         </ul>
         </section>
-        <section class="section-3">
-            <h2 class="head-2">Our Team</h2>
-            <ul>
-            <li class="list">
-                <img src="./images/mark-guerrero.jpg" 
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+            <li class="team-iteil">
+                <img class="team-img" src="./images/mark-guerrero.jpg" 
                 alt="mark-guerrero" 
                 width="264"
                 height="260"
                 />
-           <h3 class="head-3">Mark Guerrero</h3>
-            <p class="text">Product Designer</p></li>
-             <li class="list">
-                <img src="./images/tom-ford.jpg" 
+           <h3 class="team-head">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p></li>
+             <li class="team-iteil">
+                <img class="team-img" src="./images/tom-ford.jpg" 
                 alt="tom-ford" 
                 width="264"
                 height="260"
                  />
-           <h3 class="head-3">Tom Ford</h3>
-            <p class="text">Frontend Developer</p></li>
-             <li class="list">
-                <img src="./images/camila-carcia.jpg"  
+           <h3 class="team-head">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p></li>
+             <li class="team-iteil">
+                <img class="team-img" src="./images/camila-carcia.jpg"  
                 alt="camila-carcia" 
                 width="264" 
                 height="260"  
             />
-            <h3 class="head-3">Camila Garcia</h3>
-            <p class="text">Marketing</p></li>
-            <li class="list">
-                <img src="./images/daniel-wilson.jpg" 
+            <h3 class="team-head">Camila Garcia</h3>
+            <p class="team-text">Marketing</p></li>
+            <li class="team-iteil">
+                <img class="team-img" src="./images/daniel-wilson.jpg" 
                 alt="daniel-wilson" 
                 width="264"
                 height="260"
             />
-            <h3 class="head-3">Daniel Wilson</h3>
-            <p class="text">UI Designer</p></li>
+            <h3 class="team-head">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p></li>
         </ul></section>
-        <section class="section-4">
-            <h2 class="head-2">Our Portfolio</h2>
-                <ul> 
-                    <li><img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300">
-                    <h3 class="head-3">Banking App</h3>
-                    <p class="text">App</p></li>
+        <section class="portfolio">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+                <ul class="portfolio-list"> 
+                    <li class="portfolio-iteil"><img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300">
+                    <h3 class="portfolio-head">Banking App</h3>
+                    <p class="portfolio-text">App</p></li>
                 </ul>
                 <ul>  
-                    <li><img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"> 
-                    <h3 class="head-3">Cashless Payment</h3>
-                    <p class="text">Marketing</p></li> 
+                    <li class="portfolio-iteil"><img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"> 
+                    <h3 class="portfolio-head">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p></li> 
                 </ul>
                 <ul>    
-                    <li><img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300">
-                    <h3 class="head-3">Meditation App</h3>
-                    <p class="text">App</p></li>     
+                    <li class="portfolio-iteil"><img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300">
+                    <h3 class="portfolio-head">Meditation App</h3>
+                    <p class="portfolio-text">App</p></li>     
                 </ul>
                 <ul>  
-                    <li><img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300">
-                    <h3 class="head-3">Taxi Service</h3>
-                    <p class="text">Marketing</p></li>
+                    <li class="portfolio-iteil"><img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300">
+                    <h3 class="portfolio-head">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p></li>
                 </ul>
                 <ul>         
-                    <li><img src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300">
-                    <h3 class="head-3">Screen Illustrations</h3>
-                    <p class="text">Design</p></li> 
+                    <li class="portfolio-iteil"><img src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300">
+                    <h3 class="portfolio-head">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p></li> 
                 </ul>
                 <ul>         
-                    <li><img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300">
-                    <h3 class="head-3">Online Courses</h3>
-                    <p class="text">Marketing</p></li> 
+                    <li class="portfolio-iteil"><img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300">
+                    <h3 class="portfolio-head">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p></li> 
                 </ul>
         </section>
     </main>
