updau index html file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
         integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,9 +18,13 @@
 </head>
 <body>
     <header class="header-nav">
-        <nav>
-    <ul>   
-        <li class="logo"><a href="./index.html">Web<span class="logo-black">Studio</span></a></li>
+        <nav class="header-navi">
+            <a 
+            class="logo"
+            href="./index.html">
+            Web<span class="logo-black">Studio</span></a>
+
+    <ul class="header-menu-list">   
         <li class="link-text"><a href="#studio">Studio</a></li>
         <li class="link-text"><a href="#our">Portfolio</a></li>
         <li class="link-text"><a href="#contacts">Contacts</a></li>
@@ -38,7 +43,7 @@
         <button type="button" class="business-button">Order Service</button>
     </section>
     <section class="strategy">
-    <h2 class="sr-only" aria-hidden="true">Effective Solutions for Your Business</h2>
+    <h2 class="visually-hidden">Effective Solutions for Your Business</h2>
         <ul class="strategy-list">
             <li class="strategy-iteil"><h3 class="strategy-head">Strategy</h3>
             <p class="strategy-text">
