--- a/index.html
+++ b/index.html
@@ -102,32 +102,32 @@
         <section class="portfolio">
             <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list"> 
-                    <li class="portfolio-iteil"><img class="portfolio-img" src="./images/banking-app.jpg" alt="banking-app" width="360" height="300">
+                    <li><img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300">
                     <h3 class="portfolio-head">Banking App</h3>
                     <p class="portfolio-text">App</p></li>
                 </ul>
                 <ul>  
-                    <li class="portfolio-iteil"><img class="portfolio-img" src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"> 
+                    <li><img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"> 
                     <h3 class="portfolio-head">Cashless Payment</h3>
                     <p class="portfolio-text">Marketing</p></li> 
                 </ul>
                 <ul>    
-                    <li class="portfolio-iteil"><img class="portfolio-img" src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300">
+                    <li><img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300">
                     <h3 class="portfolio-head">Meditation App</h3>
                     <p class="portfolio-text">App</p></li>     
                 </ul>
                 <ul>  
-                    <li class="portfolio-iteil"><img class="portfolio-img" src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300">
+                    <li><img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300">
                     <h3 class="portfolio-head">Taxi Service</h3>
                     <p class="portfolio-text">Marketing</p></li>
                 </ul>
                 <ul>         
-                    <li class="portfolio-iteil"><img class="portfolio-img" src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300">
+                    <li><img class="portfolio-img" src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300">
                     <h3 class="portfolio-head">Screen Illustrations</h3>
                     <p class="portfolio-text">Design</p></li> 
                 </ul>
                 <ul>         
-                    <li class="portfolio-iteil"><img class="portfolio-img" src="./images/online-courses.jpg" alt="online-courses" width="360" height="300">
+                    <li><img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300">
                     <h3 class="portfolio-head">Online Courses</h3>
                     <p class="portfolio-text">Marketing</p></li> 
                 </ul>
