upday index html css file

--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 <body>
     <header class="header-nav">
         <nav class="header-navi">
-            <a 
+            <a id="studio"
             href="./index.html"
             class="logo-link">
             Web<span class="logo-black">Studio</span></a>
 
     <ul class="header-menu-list">   
-        <li class="link-text"><a href="#studio">Studio</a></li>
-        <li class="link-text"><a href="#our">Portfolio</a></li>
-        <li class="link-text"><a href="#contacts">Contacts</a></li>
+        <li class="link-text"><a class="link-nav" href="./index.html">Studio</a></li>
+        <li class="link-text"><a class="link-nav" href="">Portfolio</a></li>
+        <li class="link-text"><a class="link-nav" href="">Contacts</a></li>
     </ul>
    </nav>
    <address class="address">
     <ul>
-      <li class="address-1"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li class="address-1"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <li class="address-1"><a class="address-text" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="address-1"><a class="address-text" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
   </address>
     </header>
@@ -105,28 +105,23 @@
                     <li><img src="./images/banking-app.jpg" alt="banking-app" width="360" height="300">
                     <h3 class="portfolio-head">Banking App</h3>
                     <p class="portfolio-text">App</p></li>
-                </ul>
-                <ul>  
+
                     <li><img src="./images/cashless-payment.jpg" alt="cashless-payment" width="360" height="300"> 
                     <h3 class="portfolio-head">Cashless Payment</h3>
-                    <p class="portfolio-text">Marketing</p></li> 
-                </ul>
-                <ul>    
+                    <p class="portfolio-text">Marketing</p></li>
+
                     <li><img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300">
                     <h3 class="portfolio-head">Meditation App</h3>
-                    <p class="portfolio-text">App</p></li>     
-                </ul>
-                <ul>  
+                    <p class="portfolio-text">App</p></li>  
+
                     <li><img src="./images/taxi-service.jpg" alt="taxi-service" width="360" height="300">
                     <h3 class="portfolio-head">Taxi Service</h3>
                     <p class="portfolio-text">Marketing</p></li>
-                </ul>
-                <ul>         
+
                     <li><img class="portfolio-img" src="./images/screen-llustrations.jpg" alt="screen-llustrations" width="360" height="300">
                     <h3 class="portfolio-head">Screen Illustrations</h3>
                     <p class="portfolio-text">Design</p></li> 
-                </ul>
-                <ul>         
+
                     <li><img src="./images/online-courses.jpg" alt="online-courses" width="360" height="300">
                     <h3 class="portfolio-head">Online Courses</h3>
                     <p class="portfolio-text">Marketing</p></li> 
