--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
         integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Effective Solutions
+
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1/modern-normalize.min.css">
+
+        <title>Effective Solutions
     for Your Business</title>
+
     <link rel="stylesheet" href="./css/styles.css">
+    
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1/modern-normalize.min.css">
-</head>
+ </head>      
 <body>
     <header class="header-nav">
         <nav class="header-navi">
@@ -30,7 +34,7 @@
         <li class="link-text"><a class="link-nav" href="">Contacts</a></li>
     </ul>
    </nav>
-   <address class="address">
+   <address class="address-teg">
     <ul>
       <li class="address-1"><a class="address-text" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li class="address-1"><a class="address-text" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
