--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="link-text"><a class="link-nav" href="">Contacts</a></li>
     </ul>
    </nav>
-   <address class="address-teg">
+   <address class="address">
     <ul>
       <li class="address-1"><a class="address-text" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li class="address-1"><a class="address-text" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
